--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xISrLw0gys2Tiw/9LhbUw9ceAl7WFmMLZpUaVVcUpnc=
 APP_DEBUG=true
+APP_GOOGLE_KEY=AIzaSyCg14JJjhqvxLvQh-KdKzlmh1uSHwyimRg
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -11,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=hospital
 DB_USERNAME=root
 DB_PASSWORD=
 
